--- a/Config/DefaultEngine.ini
+++ b/Config/DefaultEngine.ini
@@ -1,7 +1,7 @@
 [/Script/EngineSettings.GameMapsSettings]
 GameDefaultMap=/Game/Mps/Training.Training
 EditorStartupMap=/Game/Mps/Training.Training
-GlobalDefaultGameMode=/Game/ThirdPerson/Blueprints/BP_ThirdPersonGameMode.BP_ThirdPersonGameMode_C
+GlobalDefaultGameMode=/Script/Engine.GameMode
 
 [/Script/Engine.RendererSettings]
 r.ReflectionMethod=1
